@@ -148,14 +148,14 @@ function ERM_UnitHelper.format_map_color(color)
 end
 
 function ERM_UnitHelper.format_team_color(color, tint_strength)
-    tint_strength = tint_strength or 3
+    tint_strength = tint_strength or 4
     color = util.table.deepcopy(color)
 
     --- Blend Additive (Alpha 0), Alpha 25%, Alpha 50%, Alpha 66%, Alpha 75%, Alpha 90%
     local tint_alpha_options_as_dec = {0, 0.25, 0.5, 0.66, 0.75, 0.9}
     local tint_alpha_options_as_int = {0, 64, 128, 170, 192, 230}
 
-    if color.b >= 1 or color.g >= 1 or color.r >= 1 then
+    if color.b > 1 or color.g > 1 or color.r > 1 then
         color.a = tint_alpha_options_as_int[tint_strength]
     else
         color.a = tint_alpha_options_as_dec[tint_strength]
